--- a/example/public/ApplicationMain.html
+++ b/example/public/ApplicationMain.html
@@ -7,7 +7,7 @@
     <title>ApplicationMain</title>
   </head>
   <body>
-    <script src="build/ApplicationMain.js"></script>
-    <script src="build/app.js"></script>
+    <script src="/build/ApplicationMain.js"></script>
+    <script src="/build/app.js"></script>
   </body>
 </html>
