--- a/example/public/Submodules.html
+++ b/example/public/Submodules.html
@@ -10,7 +10,7 @@
       <li>
         <a href="/submodules/elm-spa-example/">elm-spa-example</a>
       </li>
-      <li><a href="/submodules/codebase-ui/src/ucm.html">Unison UCM</a></li>
+      <li><a href="/submodules/concourse/web/public/">Concourse</a></li>
       <li>
         <a href="/submodules/codebase-ui/src/unisonShare.html">Unison Share</a>
       </li>
