Document window.Elm

--- a/example-minimal/index.html
+++ b/example-minimal/index.html
@@ -6,7 +6,7 @@
     <title>example-minimal</title>
   </head>
   <body>
-    <script src="build/main.js"></script>
+    <script src="./build/main.js"></script>
     <script>
       Elm.Main.init({ node: document.body });
     </script>
