Mount example apps in a div
`{ node: document.body }` _works,_ but is very confusing because Elm
replaces the `<body>` with a `<div>`.

It’s bad to have bad examples. Shame on lazy past me.

--- a/example-minimal/index.html
+++ b/example-minimal/index.html
@@ -6,9 +6,10 @@
     <title>example-minimal</title>
   </head>
   <body>
+    <div id="root"></div>
     <script src="./build/main.js"></script>
     <script>
-      Elm.Main.init({ node: document.body });
+      Elm.Main.init({ node: document.getElementById("root") });
     </script>
   </body>
 </html>
